Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33668

Regression in moc

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.2.0
    • Build tools: moc
    • None

    Description

      There seems to be a regression in recent moc version (git describe - v5.1.1-1211-g3e346b8) where parsing signals in .h files with macros in front results in parse error. See attached testcase.

      Fails when run like this:

      moc -DKDE4SUPPORT_DEPRECATED= test.h

      It used to work sometime before (not sure exactly) and it definitely works with Qt4 moc.

      If you need any more information/testing, let me know.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ogoffart Olivier Goffart (Woboq GmbH)
            mck182 Martin Klapetek
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes