tests/auto/tools/moc/parse-defines.h
@@ -79,9 +79,16 @@
 #define PD_ADD_SUFFIX(x)  PD_DEFINE1(x,_SUFFIX)
 #define PD_DEFINE_ITSELF PD_ADD_SUFFIX(PD_DEFINE_ITSELF)
 
+#ifndef Q_MOC_RUN
+// macro defined on the command line (in tst_moc.pro)
+#define DEFINE_CMDLINE_EMPTY
+#define DEFINE_CMDLINE_SIGNAL void cmdlineSignal(const QMap<int, int> &i)
+#endif
+
 PD_BEGIN_NAMESPACE
 
-class PD_CLASSNAME : public QObject
+class DEFINE_CMDLINE_EMPTY PD_CLASSNAME DEFINE_CMDLINE_EMPTY
+    : public DEFINE_CMDLINE_EMPTY QObject DEFINE_CMDLINE_EMPTY
 {
     Q_OBJECT
     Q_CLASSINFO("TestString", PD_STRINGIFY(PD_CLASSNAME))
@@ -139,6 +146,9 @@ public slots:
 #endif
 
     void PD_DEFINE_ITSELF(int) {}
+
+signals:
+    DEFINE_CMDLINE_SIGNAL;
 
 };
 
